--- a/src/index.css
+++ b/src/index.css
@@ -823,10 +823,12 @@ button {
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px dotted #fff;
+  border: 5px dotted #00cc66;
   border-radius: 50%;
   display: inline-block;
   position: relative;
+  /* margin-top: 50%; */
+  left: 50%;
   box-sizing: border-box;
   animation: rotation 2s linear infinite;
 }
